welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:37: error: not found: type color
def L1F(c:color) {
          ^FlowerPot:27: error: not found: value flowers
  flowers(c1)
  ^FlowerPot:30: error: not found: value flower
  flower(c2)
  ^FlowerPot:40: error: not found: value flower
  flower(c)
  ^